--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f8fafc; /* Tema Claro */
-            color: #1e293b; /* Texto Escuro */
+            background-color: #f8fafc;
+            color: #1e293b;
         }
         .section-title {
             font-weight: 900;
             font-size: 2.5rem;
             line-height: 1.2;
-            color: #00538a; /* Azul SENAI Escuro */
+            color: #00538a;
         }
         .card {
             background-color: #ffffff;
@@ -29,7 +29,7 @@
             box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
         }
         .card:hover {
-            border-color: #0071bb; /* Azul SENAI Padrão */
+            border-color: #0071bb;
             transform: translateY(-5px);
             box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
         }
@@ -78,7 +78,6 @@
 
     <!-- Header -->
     <header class="container mx-auto px-6 pt-12 pb-10 text-center">
-        <!-- LOGOMARCA SUBSTITUÍDA -->
         <img src="https://i.postimg.cc/BQpTpfnH/det-gep.png" alt="Logomarca SENAI" class="h-20 w-auto mx-auto mb-8">
         <h1 class="text-4xl md:text-5xl font-black leading-tight tracking-tighter text-slate-900">
             Defesa Técnica para Implantação do<br> <span style="color: #0071bb;">CST em Internet das Coisas</span>
@@ -111,7 +110,7 @@
                     <h3 class="font-bold text-xl text-center mb-4">Competências em Transformação até 2027</h3>
                     <canvas id="skillsChart"></canvas>
                     <p class="text-xs text-center mt-2 text-slate-500">
-                        Fonte: <a href="https://www.weforum.org/reports/the-future-of-jobs-report-2023/" target="_blank" class="source-link">World Economic Forum, The Future of Jobs Report 2023</a>.
+                        Fonte: World Economic Forum, The Future of Jobs Report 2023.
                     </p>
                 </div>
             </div>
@@ -120,7 +119,7 @@
         <!-- Seção 2: Goiás como Epicentro da Demanda -->
         <section class="fade-in text-center">
             <h2 class="section-title">Goiás: Epicentro da Demanda por IoT</h2>
-            <p class="mt-4 text-slate-600 max-w-3xl mx-auto">Conforme o parecer, a força da <span class="font-bold">Indústria 4.0</span> e do <span class="font-bold">Agronegócio</span> em Goiás cria o ambiente ideal para a aplicação de IoT. O estado registrou um <span class="font-bold">crescimento industrial de 4,3% em 2024</span> (<a href="https://www.portaldaindustria.com.br/industria-de-a-z/desempenho-da-producao-industrial/" target="_blank" class="source-link">Fonte: CNI</a>), acima da média nacional. O agronegócio, por sua vez, busca incessantemente por tecnologia para otimizar a produção.</p>
+            <p class="mt-4 text-slate-600 max-w-3xl mx-auto">Conforme o parecer, a força da <span class="font-bold">Indústria 4.0</span> e do <span class="font-bold">Agronegócio</span> em Goiás cria o ambiente ideal para a aplicação de IoT. O estado registrou um <span class="font-bold">crescimento industrial de 4,3% em 2024</span>, acima da média nacional. O agronegócio, por sua vez, busca incessantemente por tecnologia para otimizar a produção.</p>
             <div class="grid md:grid-cols-2 gap-12 mt-12 items-center">
                 <div class="card rounded-xl p-6">
                     <h3 class="font-bold text-xl text-center mb-4">Principais Setores de Aplicação de IoT no Brasil (%)</h3>
@@ -128,7 +127,7 @@
                         <canvas id="demandChart"></canvas>
                     </div>
                     <p class="text-xs text-center mt-2 text-slate-500">
-                        Fonte: <a href="https://blog.logicalis.com/latin-america/solucoes/iot-benchmark-study-2024-da-logicalis-revela-a-maturidade-da-adocao-de-iot-e-ia-no-brasil" target="_blank" class="source-link">ABINC/Logicalis, Panorama IoT & IA 2024</a>.
+                        Fonte: ABINC/Logicalis, Panorama IoT & IA 2024.
                     </p>
                 </div>
                 <div class="text-left p-4 self-center">
@@ -157,7 +156,7 @@
                     <h3 class="font-bold text-xl text-center mb-4">Potencial Salarial em Goiânia para Carreiras em IoT (R$)</h3>
                     <canvas id="salaryChart"></canvas>
                     <p class="text-xs text-center mt-2 text-slate-500">
-                        Fonte: <a href="https://www.salario.com.br/" target="_blank" class="source-link">Salario.com.br</a> (dados CAGED, Set. 2025). *Engenheiro no piso da categoria.
+                        Fonte: Salario.com.br (dados CAGED, Set. 2025).
                     </p>
                 </div>
             </div>
@@ -193,10 +192,16 @@
 
     </main>
     
-    <footer class="text-center py-8 mt-16 border-t border-slate-200">
+    <footer class="text-center p-8 mt-16 bg-slate-800 text-white">
         <div class="container mx-auto">
-            <p class="text-sm text-slate-500">Documento técnico elaborado como subsídio à decisão estratégica da Faculdade SENAI Fatesg.</p>
-            <p class="text-xs text-slate-400 mt-1">Alinhado ao Parecer GEP nº 58/2025.</p>
+            <h3 class="font-bold text-lg">Fontes de Informação para Consulta</h3>
+            <ul class="mt-4 text-sm space-y-2 text-slate-300 max-w-4xl mx-auto">
+                <li><span class="font-bold">Parecer GEP nº 58/2025:</span> Documento Interno - Autorização do CST em Internet das Coisas.</li>
+                <li><span class="font-bold">Fórum Econômico Mundial:</span> <a href="https://www.weforum.org/publications/the-future-of-jobs-report-2023/" target="_blank" class="source-link">The Future of Jobs Report 2023</a>.</li>
+                <li><span class="font-bold">Panorama IoT no Brasil:</span> <a href="https://www.logicalis.com/br/insights/pesquisas-e-relatorios/iot-ia-benchmark-2024/" target="_blank" class="source-link">ABINC/Logicalis IoT & IA Benchmark 2024</a>.</li>
+                <li><span class="font-bold">Crescimento Industrial:</span> <a href="https://www.portaldaindustria.com.br/estatisticas/indicadores-industriais/" target="_blank" class="source-link">CNI - Indicadores Industriais (Consolidado Nacional e Regional)</a>.</li>
+                <li><span class="font-bold">Dados Salariais:</span> <a href="https://www.salario.com.br/" target="_blank" class="source-link">Salario.com.br (Base de dados do Novo CAGED/eSocial)</a>.</li>
+            </ul>
         </div>
     </footer>
 
